playground/notas_tests/valid/r2-02.hulk
let a = 1, b = a + 1 in let a = 2 in print(b);
