playground/notas_tests/invalid/glob-02.hulk
let E = 1 in print(E);
